--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
     volumes:
-      - ./schema:/docker-entrypoint-initdb.d
+      - ./.build/volumes/databases/postgres/data:/var/lib/postgresql/data
     networks:
       - application
 
